# nautobot-app-bgp-models

./: .bandit.yml  .cookiecutter.json  .dockerignore  .flake8  .gitignore  .pydocstyle.ini  .travis.yml  CONTRIBUTING.md  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: +NAPPS-1006.dependencies  117.added  189.removed  190.fixed  192.changed  193.added  199.housekeeping  215.added  219.housekeeping  226.added  226.fixed  232.changed  232.fixed  245.fixed  248.fixed  249.added  250.changed  251.added  257.changed  258.housekeeping  268.changed  268.housekeeping  269.housekeeping  270.housekeeping  280.changed  289.fixed  29.added  290.changed  290.housekeeping  298.added  298.changed  298.housekeeping  301.added  304.fixed  312.added  566.housekeeping
development/: Dockerfile  dev.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.local.yml  nautobot_config.py  towncrier_template.j2
docs/: cisco_use_case.md  development.md  example.md  index.md  juniper_use_case.md  manual.md  models.md  requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_0.20.md  version_0.7.md  version_0.8.md  version_0.9.md  version_1.0.md  version_2.0.md  version_2.1.md  version_2.2.md  version_2.3.md  version_2.4.md  version_3.0.md  version_3.1.md
docs/dev/: contributing.md  dev_environment.md  models.md  release_checklist.md
docs/dev/code_reference/: api.md  package.md
docs/models/: autonomoussystem.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  cisco_use_case.md  juniper_use_case.md
nautobot_bgp_models/: __init__.py  app-config-schema.json  choices.py  dolt_compat.py  filter_extensions.py  filters.py  forms.py  helpers.py  models.py  navigation.py  signals.py  table_columns.py  tables.py  template_content.py  urls.py  utils.py  views.py
nautobot_bgp_models/api/: __init__.py  filter_backends.py  nested_serializers.py  serializers.py  urls.py  views.py
nautobot_bgp_models/graphql/: types.py
nautobot_bgp_models/management/commands/: generate_bgp_models_data.py  generate_bgp_test_data.py
nautobot_bgp_models/migrations/: 0001_initial.py  0001_initial_squashed_0005_use_upstream_role_part4_nautobotv2.py  0002_refactoring.py  0002_rename_template_peergroup_peergroup_template.py  0002_use_upstream_role_part1.py  0002_viewsets_migration.py  0003_addressfamily_ordering.py  0003_bgproutinginstance_status.py  0003_peergroupaddressfamily_peerendpointaddressfamily.py  0003_use_upstream_role_part1.py  0003_use_upstream_role_part2.py  0004_auto_20210830_2155.py  0004_auto_20210831_1834.py  0004_use_upstream_role_part1.py  0004_use_upstream_role_part2.py  0004_use_upstream_role_part3.py  0005_auto_20210902_1922.py  0005_use_upstream_role_part2.py  0005_use_upstream_role_part3.py  0005_use_upstream_role_part4.py  0006_nautobotv2_updates.py  0006_use_upstream_role_part3.py  0007_use_upstream_role_part4.py  0008_nautobotv2_updates.py  0009_autonomoussystemrange.py  0009_peerendpoint_label_part1.py  0010_alter_autonomoussystem_status_and_more.py  0010_auto_20240704_0427.py  0010_peerendpoint_label_part2.py  0011_alter_bgproutinginstance_unique_together_and_more.py  0011_autonomoussystem_tenant.py  0011_peergrouptemplateendpoint.py  0012_alter_autonomoussystem_tenant.py  0012_alter_peergrouptemplateendpoint_peer_group_template.py
nautobot_bgp_models/templates/nautobot_bgp_models/: abstractpeeringinfo.html  abstractpeeringinfo_edit.html  addressfamily.html  addressfamily_edit.html  addressfamily_retrieve.html  autonomoussystem.html  autonomoussystem_bulk_add.html  autonomoussystem_edit.html  autonomoussystem_retrieve.html  autonomoussystemrange_retrieve.html  bgproutinginstance_retrieve.html  extra_attributes.html  peerendpoint.html  peerendpoint_edit.html  peerendpoint_retrieve.html  peerendpointaddressfamily_retrieve.html  peergroup.html  peergroup_edit.html  peergroup_retrieve.html  peergroupaddressfamily_retrieve.html  peergrouptemplate.html  peergrouptemplate_retrieve.html  peergrouptemplateaddressfamily_retrieve.html  peergrouptemplateendpoint_retrieve.html  peering.html  peering_add.html  peering_create.html  peering_retrieve.html  peeringrole.html  peersession.html
nautobot_bgp_models/templates/nautobot_bgp_models/inc/: autonomoussystem_edit_header.html  device_address_families.html  device_autonomous_systems.html  device_bgp_routing_instances.html  device_peer_endpoints.html  device_peer_endpoints_table.html  inheritable_property.html  native_property.html  peerendpoint.html
nautobot_bgp_models/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_filter_autonomoussystem.py  test_filters.py  test_forms.py  test_helpers.py  test_model_autonomoussystem.py  test_models.py  test_table_columns.py  test_utils.py  test_views.py  test_vrf_integration.py
