[tool.poetry]
name = "nautobot-bgp-models"
version = "0.8.0"
description = "Nautobot BGP Models Plugin"
authors = ["Network to Code, LLC <info@networktocode.com>"]

license = "Apache-2.0"

readme = "README.md"
homepage = "https://github.com/nautobot/nautobot-plugin-bgp-models"
repository = "https://github.com/nautobot/nautobot-plugin-bgp-models"
keywords = ["nautobot", "nautobot-plugin"]
include = [
    "LICENSE",
    "README.md",
]
packages = [
    { include = "nautobot_bgp_models" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
nautobot = ">=2.0.0rc1,<2.0.0rc99"

[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"
black = "*"
django-debug-toolbar = "*"
yamllint = "*"
bandit = "*"
pylint = "^2"
pylint-django = "*"
pydocstyle = "*"
# we need to pin flake8 because of package dependencies that cause it to downgrade and
# therefore cause issues with linting since older versions do not take .flake8 as config
flake8 = "^3.9.2"
coverage = "^5.5"
# Rendering docs to HTML
mkdocs = "1.3.1"
# Material for MkDocs theme
mkdocs-material = "8.4.2"
# Render custom markdown for version added/changed/remove notes
mkdocs-version-annotations = "1.0.0"
# Automatic documentation from sources, for MkDocs
mkdocstrings = "0.22"
mkdocstrings-python = "1.4.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"
# Don't complain about Django's "pk" fields
good-names = '''_,i,j,k,pk'''

[tool.pylint.messages_control]
# line-too-long: Line length is enforced by Black, so pylint doesn't need to check it.
# too-few-public-methods: is just plain noise.
# too-many-ancestors: is just a fact of life when dealing with Django and Nautobot inheritance hierarchies.
disable = """,
    line-too-long,
    too-few-public-methods,
    too-many-ancestors,
    consider-using-dict-items,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint.similarities]
min-similarity-lines = 15

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_paths = "./"
testpaths = "tests/"
addopts = "-vv --doctest-modules"
